[tool.poetry]
name = "zonticio"
version = "0.1.0"
description = ""
authors = ["Sax Dhiut <mail@iyxeyl.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.278"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
